@@ -1,0 +1,6 @@
+!define IIRC If I Recall Correctly
+!define OIIRC Only IIRC
+OIIRC
+!undef IIRC
+OIIRC
+
